# Procurement_Agent

./: .env.example  README.md  pyproject.toml
src/: main.py
src/agent/: intents.py  orchestrator.py  response_formatter.py  skill_decision.py
src/config/: runtime.py  settings.py
src/data/: adapter.py  sqlite_repo.py
src/interfaces/: cli.py
src/llm/: nim_client.py
src/observability/: trace_logger.py
src/skills/: intent_map.yaml  output_contract.json  procurement_agent_skill.md
src/tools/: anomaly_detection.py  category_management.py  intelligent_recommendation.py  konsolidasi_pemaketan.py
